--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -28,7 +28,7 @@
             <local:BooleanSwitchOperationConverter x:Key="BooleanSwitchOperationConverter"/>
             <local:ValueEqualsConverter x:Key="ValueEqualsConverter"/>
             <local:PluginToFormatConverter x:Key="PluginToFormatConverter"/>
-            <local:MenuItemIsCheckedConverter x:Key="MenuItemIsCheckedConverter"/>
+            <local:ItemIsCheckedConverter x:Key="ItemIsCheckedConverter"/>
             <local:DoubleConstantSubConverter x:Key="DoubleConstantSubConverter"/>
             <local:IntegerConstantEqualsConverter x:Key="IntegerConstantEqualsConverter"/>
             <local:DoubleSubConverter x:Key="DoubleSubConverter"/>
