--- a/csharp/GUI/Dialog/AboutDialog.xaml
+++ b/csharp/GUI/Dialog/AboutDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="OpenSvip.GUI.AboutDialog"
+    x:Class="OpenSvip.GUI.Dialog.AboutDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
