--- a/csharp/GUI/Dialog/FileOverwriteDialog.xaml
+++ b/csharp/GUI/Dialog/FileOverwriteDialog.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="OpenSvip.GUI.FileOverwriteDialog"
+    x:Class="OpenSvip.GUI.Dialog.FileOverwriteDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:OpenSvip.GUI"
+    xmlns:local="clr-namespace:OpenSvip.GUI.Dialog"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     mc:Ignorable="d"
