--- a/csharp/GUI/TaskListViewItem.xaml
+++ b/csharp/GUI/TaskListViewItem.xaml
@@ -201,7 +201,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*" MinWidth="100" MaxWidth="240"/>
+            <ColumnDefinition Width="1*" MinWidth="107" MaxWidth="240"/>
             <ColumnDefinition Width="40"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -248,8 +248,12 @@
                 Padding="1 2"
                 d:Padding="2 4 2 0"
                 FontSize="13"
-                materialDesign:HintAssist.Hint="输出文件名"
-                Text="{Binding ExportTitle}"/>
+                Text="{Binding ExportTitle}"
+                KeyDown="ExportTitleTextBox_KeyDown">
+                <materialDesign:HintAssist.Hint>
+                    <TextBlock Text="输出文件名" VerticalAlignment="Bottom" Margin="0 1.7 0 0"/>
+                </materialDesign:HintAssist.Hint>
+            </TextBox>
         </DockPanel>
         <StackPanel Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" Margin="0 2 5 0">
             <ContentControl x:Name="TaskStatusContentControl" Content="{Binding Status}">
